	single line.

2012-06-20  GoldenKevin  (revision 91)

	* Added all server side NPC scripts for NPCs on Maple Island. The eclectic
	text is meant to be faithful to GMS v0.62 yet free of blatant misspellings
	and broken English.
	* Most commonly called methods outside of NpcConversationActions now have
	aliases in that class or its super class. The idea is to minimize the scope
	of scripts so that refactoring the sources will have less pitfalls.

2012-06-22  GoldenKevin  (revision 92)
	* All Lith Harbor NPCs (except Chef, since I can't find any reliable script
	for him, and Duey and EXP Gachapon because they're too complicated at the
	moment) are now scripted.
	* argon.sql updated.

2012-06-23  GoldenKevin  (revision 93)
	* Fixed improper usage of Rhino Context instances.
	* Packaged libraries have been updated. Rhino has been updated from version
	1.7R3 to 1.7R4 and MySQL Connector/J from 5.1.16 to 5.1.20. MySQL's .jar and
	Rhino's .jar files have been recompressed to reduce their size by a few
	kilobytes, so they do not match the size of the download you would get on
	their respective websites.

2012-06-28  GoldenKevin  (revision 94)
	* Enabled JavaScript version 1.7 features in Rhino.
	* var declarations are replaced with let in all scripts since its behavior
	is more akin to local variable declarations in Java.
	* Don't let scripts capture continuations if client disconnected.

2012-06-30  GoldenKevin  (revision 95)
	* Scripts for Henesys area NPCs with NPC IDs in the 101200x range.

2012-07-04  GoldenKevin  (revision 96)
	* Scripts for Henesys area NPCs with NPC IDs < 9102100 and NPC ID 9200100
	(bowman job advancement, Henesys PQ, Henesys beauty shops, etc.).
	* Added in stub files for unimplemented Lith Harbor scripted NPCs so I don't
	forget about them in the future.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.